styling the resume page

--- a/client/src/components/Contact/contact.scss
+++ b/client/src/components/Contact/contact.scss
@@ -1,5 +1,5 @@
-.text{
+.contactForm{
+    .text{
     text-align: center;
-    background-color: rebeccapurple;
-    border: 2px solid black;
+    }
 }
