--- a/client/src/components/Skills/skills.module.scss
+++ b/client/src/components/Skills/skills.module.scss
@@ -23,6 +23,7 @@
                 border-radius: 20px;
                 font-size: 15px;
                 padding: 5px;
+                margin-right: 5px;
             }
         
         
