--- a/client/src/components/Interests/interests.module.scss
+++ b/client/src/components/Interests/interests.module.scss
@@ -2,3 +2,64 @@
     border:2px solid rgb(82, 82, 85);
     display:block;
 }
+
+// .container {
+//   position: absolute;
+//   top: 50%;
+//   left: 50%;
+//   transform: translate(-50%, -50%);  
+
+// }
+// .inputInterest {
+//   position: absolute;
+//   left: -9999px;
+// }
+
+// .labelInterest {
+//   display: block;
+//   position: relative;
+//   margin: 20px;
+//   padding: 15px 30px 15px 62px;
+//   border: 3px solid #fff;
+//   border-radius: 100px;
+//   color: #fff;
+//   background-color: #6a8494;
+//   box-shadow: 0 0 20px rgba(0, 0, 0, .2);
+//   white-space: nowrap;
+//   cursor: pointer;
+//   user-select: none;
+//   transition: background-color .2s, box-shadow .2s;
+// }
+
+// .labelInterest::before {
+//   content: '';
+//   display: block;
+//   position: absolute;
+//   top: 10px;
+//   bottom: 10px;
+//   left: 10px;
+//   width: 32px;
+//   border: 3px solid #fff;
+//   border-radius: 100px;
+//   transition: background-color .2s;
+// }
+
+// .labelInterest:first-of-type {
+//   transform: translateX(-40px);
+// }
+
+// .labelInterest:last-of-type {
+//   transform: translateX(40px);
+// }
+
+// .labelInterest:hover, .inputInterest:focus + .labelInterest {
+//   box-shadow: 0 0 20px rgba(0, 0, 0, .6);
+// }
+
+// .inputInterest:checked + .labelInterest {
+//   background-color: #ab576c;
+// }
+
+// .inputInterest:checked + .labelInterest::before {
+//   background-color: #fff;
+// }
