--- a/client/src/components/LandingPage/landing.scss
+++ b/client/src/components/LandingPage/landing.scss
@@ -4,7 +4,7 @@
 
 .hero{
     text-align: center;
-    background-color: lightcoral;
+    background: lightcoral;
     color: floralwhite;
     padding: 25%;
 }
