fixed devicon problems

--- a/client/src/components/Profile/profile.scss
+++ b/client/src/components/Profile/profile.scss
@@ -4,6 +4,7 @@
     background-repeat: no-repeat;
     display: grid;
     position: relative;
+    min-height: 100vh;
     // justify-content: right;
     .bio{
         color: mintcream;
